# latent-space-ai-agents-system

./: .gitignore  .pre-commit-config.yaml  .uv.toml.sample  README.md  pip.conf.sample  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  phase_progress.md
.github/workflows/: ci.yml
src/latent_agents/: __init__.py
src/latent_agents/analysis/: __init__.py  drift_detector.py  realignment_validator.py  tensor_inspector.py
src/latent_agents/capture/: __init__.py  hidden_state_tap.py  kv_cache_tap.py  tensor_serializer.py
src/latent_agents/coordination/: __init__.py  latent_flow_tracer.py  provenance_tracker.py  working_memory.py  working_memory_auditor.py
src/latent_agents/multimodal/: __init__.py  cross_modal_validator.py
src/latent_agents/ops/: __init__.py  alert_manager.py  drift_detector.py  online_monitor.py  prometheus_exporter.py  slo.py
src/latent_agents/quality/: __init__.py  adversarial_tester.py  chaos.py  llm_judge_orchestrator.py  performance_profiler.py
src/latent_agents/schemas/: __init__.py  latent_representation.py  provenance.py  verification_result.py
src/latent_agents/semantic/: __init__.py  cross_model_aligner.py  decode_back_verifier.py  probing_classifier.py
src/latent_agents/verifier/: __init__.py  base.py  registry.py
tests/: conftest.py
tests/integration/: test_phase1_end_to_end.py
tests/unit/analysis/: test_realignment_validator.py  test_tensor_inspector.py
tests/unit/capture/: test_hidden_state_tap.py  test_kv_cache_tap.py  test_tensor_serializer.py
tests/unit/coordination/: test_latent_flow_tracer.py  test_provenance_tracker.py  test_working_memory.py
tests/unit/multimodal/: test_cross_modal_validator.py
tests/unit/ops/: test_online_monitor.py  test_prometheus_exporter.py
tests/unit/quality/: test_adversarial_tester.py  test_chaos.py  test_llm_judge_orchestrator.py  test_performance_profiler.py
tests/unit/schemas/: test_latent_representation.py  test_provenance.py  test_verification_result.py
tests/unit/semantic/: test_cross_model_aligner.py  test_decode_back_verifier.py  test_probing_classifier.py
tests/unit/verifier/: test_base.py
