[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "latent-agents"
version = "0.1.0"
description = "AI agent for verifying multi-LLM latent-space communication (hidden states / KV cache)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "sotanengel" }]
keywords = ["llm", "multi-agent", "latent-space", "kv-cache", "verification"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.3,<3.0",
    "transformers>=4.43,<5.0",
    "safetensors>=0.4.3",
    "numpy>=1.26,<3.0",
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
gpu = [
    "vllm>=0.5.0; platform_system != 'Windows'",
]
quant = [
    "bitsandbytes>=0.43; platform_system != 'Windows'",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "hypothesis>=6.100",
]

[project.urls]
Homepage = "https://github.com/sotanengel/latent-space-ai-agents-system"
Issues = "https://github.com/sotanengel/latent-space-ai-agents-system/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/latent_agents"]

[tool.hatch.build.targets.sdist]
include = ["src/latent_agents", "README.md", "LICENSE", "pyproject.toml"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "C4",            # comprehensions
    "PT",            # pytest
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "PT011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]
exclude = [
    "^build/",
    "^dist/",
]

[[tool.mypy.overrides]]
module = ["transformers.*", "safetensors.*", "torch.*"]
ignore_missing_imports = true

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: tests that download models or otherwise take long",
    "integration: end-to-end integration tests",
    "gpu: tests requiring a GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning:transformers.*",
]

# ---------- coverage ----------
[tool.coverage.run]
source = ["src/latent_agents"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
